@@ -3,6 +3,8 @@
 * Bugfixes
 
   * Nokogiri::XML::NodeSet#search will search top level nodes. GH #73
+  * Removed namespace related methods from Nokogiri::XML::Document
+  * Fixed a segfault when a namespace was added twice
 
 === 1.3.1 / 2009-06-07
 
